--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import "./components/input.scss";
+@import "./components/card.scss";
+
 img {
     height: 60px;
     width: 63px;
@@ -35,14 +37,11 @@ p {
     top: -16px;
     margin-left: 20px;
 }
-.card-grid {
+.card-header {
     display: grid;
     grid-template-columns: auto auto
 };
-.card {
-    display: grid;
-    grid-template-columns: auto auto;
-}
+
 .card-date-grid {
     display: grid;
     grid-template-columns: 16% auto;
